--- a/src/input.css
+++ b/src/input.css
@@ -12,7 +12,8 @@
 }
 
 @layer components {
- .menu-item {
- @apply relative flex h-full font-bold text-pink-200 cursor-pointer p-4 hover:text-zinc-200 hover:bg-white/10 transition-colors ease-in-out; }
+    .menu-item {
+        @apply relative flex h-full font-bold text-pink-200 cursor-pointer p-4 hover:text-zinc-200 hover:bg-white/10 transition-colors ease-in-out; 
+    }
 }
 
