--- a/src/input.css
+++ b/src/input.css
@@ -13,7 +13,18 @@
 
 @layer components {
     .menu-item {
-        @apply relative flex h-full font-bold text-pink-200 cursor-pointer p-4 hover:text-zinc-200 hover:bg-white/10 transition-colors ease-in-out; 
+        @apply relative flex h-full font-bold text-pink-200 cursor-pointer p-4 hover:text-zinc-200 hover:bg-white/10 transition-colors ease-in-out;
     }
 }
+
+@layer base {
+  h1 { @apply text-6xl font-bold; }
+  h2 { @apply text-5xl font-bold; }
+  h3 { @apply text-4xl font-bold; }
+  h4 { @apply text-3xl font-bold; }
+  h5 { @apply text-2xl font-bold; }
+  h6 { @apply text-xl font-bold; }
+}
+
+
 
